--- a/style.css
+++ b/style.css
@@ -12,12 +12,18 @@ html{
 
 nav{
     display:flex;
-    
+    flex-flow: row nowrap;
+    justify-content: space-between;
+}
+
+h1{
+    padding: 10px 25px;
+    font-size: 2rem;
 }
 
 
-
 #icone-settings{
+    padding: 10px 25px;
     width: 25px;
     
 }
@@ -29,7 +35,10 @@ nav{
     border-radius: 10px;
     margin: 50px;
     padding: 50px;
+    
+    
 }
+
 
 .tipo-intervalo{
     
@@ -61,6 +70,7 @@ h2{
     color: yellow;
     font-weight: bold;
     font-size: 1.5rem;
+    align-self: center;
     
     
 }
