--- a/style.css
+++ b/style.css
@@ -67,6 +67,7 @@ li{
     flex-shrink: 1;
     flex-grow: 1;
     box-shadow: 1px 1px 1px #0D0D0D;
+    cursor: pointer;
 
 }
 
@@ -107,6 +108,7 @@ h2{
     font-size: 1.5rem;
     margin-top: 20px ;
     margin: 5px;
+    cursor: pointer;
     
     
     
