--- a/style.css
+++ b/style.css
@@ -96,7 +96,7 @@ h2{
 
 }
 
-/*filho de botao iniciar*/
+
 .botao{
     
     background-color:#0D0D0D;
@@ -111,10 +111,15 @@ h2{
     cursor: pointer;
     
     
-    
-    
 }
 
+.botao-next{
+    cursor: pointer;
+    width: 50px;
+    margin-inline-start: 20px;
+    
+
+}
 section > p{
     text-align: center;
     font-size: 1.5rem;
