--- a/style-settings.css
+++ b/style-settings.css
@@ -6,41 +6,55 @@
 
 form{
     width: 500px;
-    height: 600px;
+    height: 500px;
     display: inline-block;
     background-color:#8a97a0;
+    border-radius: 10px;
 }
 
 .borda{
-    width: 100%;
-    border: 1px solid black;
+    width: 80%;
+    border: 1px solid #8a97a0;
+    margin: auto;
+    margin-top: 20px;
+    padding: 0px 15px;
+    border-radius: 10px;
     font-weight: bold;
     font-size: 1.3rem;
+    background-color: #9FB3BF
 }
 
-form input[type="number"] {
+form input{
     width: 100%;
+    font-size: 1.5rem;
     display: inline-block;
-    width: 50px;
-    height: 20px;
+    width: 100px;
+    height: 40px;
     margin: 8px 0px 8px 25px;
+    border-radius: 10px;
+    text-align: center;
+    background-color: #9FB3BF;
+    box-shadow: 0px 0px 1px 0.2px #8a97a0;
+
+
 
 }
 
-form input[type="submit"] {
+#botao-salvar {
     display: block;
     background-color: black;
     color: white;
-    font-size: 1.3rem;
+    font-size: 1.5rem;
     width: 50%;
-    height: 35px;
+    height: 45px;
     margin: auto; 
+    margin-top: 40px;
     font-weight: bold;
     border-radius: 5px;
     border: 2px solid black;
 }
 
-form input[type="submit"]:hover{
+#botao-salvar:hover{
     background-color: white;
     color: black;
     cursor: pointer;
